feat: first game functionality
